--- a/app/frontend/app/templates/pro.hbs
+++ b/app/frontend/app/templates/pro.hbs
@@ -46,7 +46,8 @@
           <div class="error-state">
             <div class="state-content">
               <i class="fa fa-warning"></i>
-              <div>Something went wrong: {{errorMessage}}. Please try again later.</div>
+              <div>{{errorMessage}}.</div>
+              <small>Please try again later.</small>
             </div>
           </div>
         {{/if}}
