--- a/app/frontend/app/templates/pro.hbs
+++ b/app/frontend/app/templates/pro.hbs
@@ -45,8 +45,8 @@
         {{#if isGifted}}
           <div class="gifted-state">
             <div class="state-content">
-              <i class="fa fa-check-circle"></i>
-              <div>Your gift is on its way</div>
+              <i class="fa fa-gift"></i>
+              <div>Your gift is on its way!</div>
             </div>
           </div>
         {{/if}}
