--- a/app/views/pro_mailer/welcome_email.html.erb
+++ b/app/views/pro_mailer/welcome_email.html.erb
@@ -23,7 +23,7 @@
 
       <tr>
         <td><img alt="" border="0" class="CToWUd" height="auto" src=
-        "https://s3.amazonaws.com/uploads.hipchat.com/40468/273917/jNcQyZieQcmSeul/logo-header.jpg"
+        "https://hummingbird.me/images/email-logo-header.jpg"
         style=
         "display:block;border:none;outline:none;text-decoration:none;margin:0 auto"
         width="210" />
@@ -44,7 +44,7 @@
     <tbody>
       <tr>
         <td data-bg="Header" height="462" style=
-        "-webkit-background-size: cover; background-attachment: scroll; background-color: #303030; background-image: url(http://www.stampready.net/do/uploads/1731061572madokathug.jpg); background-position: 50% 50%; background-repeat: no-repeat; background-size: cover">
+        "-webkit-background-size: cover; background-attachment: scroll; background-color: #303030; background-image: url(https://hummingbird.me/images/pro-back-madoka.jpg); background-position: 50% 50%; background-repeat: no-repeat; background-size: cover">
         <table align="center" border="0" cellpadding="0" cellspacing="0"
           style="opacity: 0.95" width="100%">
             <tbody>
@@ -59,7 +59,7 @@
                       <tr>
                         <td align="center"><img border="0" data-crop="false"
                         height="144" src=
-                        "http://www.stampready.net/do/uploads/510569383pro-header.png"
+                        "https://hummingbird.me/images/pro-header.png"
                         style="display: block;" />
                         </td>
                       </tr>
@@ -127,7 +127,7 @@
               <tr>
                 <td align="center">
                   <a data-bgcolor="Buttons" data-color="Buttons" data-max="24"
-                  data-size="Buttons" href="#" style=
+                  data-size="Buttons" href="https://hummingbird.me/pro" style=
                   "text-decoration: none; color: rgb(255, 255, 255); padding: 12px 21px 11px; border-radius: 3px; background-color: rgb(22, 160, 133);">
                   Learn More</a>
                 </td>
@@ -165,7 +165,7 @@
                     "color:#777;font-family:'Helvetica Neue',Helvetica,Arial;font-weight:500;text-decoration:none"
                     target="_blank"><img alt="Hummingbird" class="CToWUd"
                     height="50" src=
-                    "https://s3.amazonaws.com/uploads.hipchat.com/40468/273917/rrHwWs4xyhcVIV4/tiny-logo.jpg"
+                    "https://hummingbird.me/images/tiny-logo.jpg"
                     style=
                     "border:0;display:inline;min-height:auto;line-height:100%;outline:none;text-decoration:none"
                     width="50" /></a>
@@ -180,3 +180,4 @@
   </table>
 </body>
 </html>
+
