--- a/app/views/pro_mailer/gift_email.html.erb
+++ b/app/views/pro_mailer/gift_email.html.erb
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Cancel Hummingbird PRO</title>
+  <title>Hummingbird PRO Gift</title>
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
   <meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0;"
   name="viewport" />
@@ -27,7 +27,7 @@
 
       <tr>
         <td><img alt="" border="0" class="CToWUd" height="auto" src=
-        "https://s3.amazonaws.com/uploads.hipchat.com/40468/273917/jNcQyZieQcmSeul/logo-header.jpg"
+        "https://hummingbird.me/images/email-logo-header.jpg"
         style=
         "display:block;border:none;outline:none;text-decoration:none;margin:0 auto"
         width="210" />
@@ -44,49 +44,41 @@
 
 
   <table align="center" border="0" cellpadding="0" cellspacing="0" data-module=
-  "banner text" style=
-  "background-color: #FFFFFF; opacity: 1; position: relative; z-index: 0"
-  width="100%">
+  "header" width="100%">
     <tbody>
       <tr>
-        <td style="border-bottom: 1px solid #e0e0e0;">
-          <table align="center" border="0" cellpadding="0" cellspacing="0"
-          width="100%">
+        <td data-bg="Header" height="462" style=
+        "-webkit-background-size: cover; background-attachment: scroll; background-color: #303030; background-image: url(https://hummingbird.me/images/pro-back-madoka.jpg); background-position: 50% 50%; background-repeat: no-repeat; background-size: cover">
+        <table align="center" border="0" cellpadding="0" cellspacing="0"
+          style="opacity: 0.95" width="100%">
             <tbody>
               <tr>
-                <td class="reset" data-bgcolor="Banner" height="396" style=
-                "background-color: #303030; background-image: url(http://www.stampready.net/dashboard/templates/nova/images/bannertext-img.png); background-position: center bottom; background-repeat: repeat-x">
-                <table align="center" border="0" cellpadding="0" cellspacing=
-                "0" class="scale" width="600">
+                <td data-bgcolor="Header" height="462" style=
+                "background-color: #303030;" valign="bottom">
+                  <table align="center" border="0" cellpadding="0" cellspacing=
+                  "0" class="scale" style=
+                  "font-family:'ProximaNW01-AltLightReg', Helvetica, Arial, sans-serif; font-size: 32px; color: #FFFFFF;"
+                  width="100%">
                     <tbody>
                       <tr>
-                        <td class="reset" height="396" valign="bottom">
-                          <table align="center" border="0" cellpadding="0"
-                          cellspacing="0" class="scale" style=
-                          "font-family:'ProximaNW01-AltLightReg', Helvetica, Arial, sans-serif; font-size: 24px; color: #b9b9b9;"
-                          width="600">
-                            <tbody>
-                              <tr>
-                                <td align="center" class=
-                                "scale-center-topextra" data-color=
-                                "Big Headliness" data-max="36" data-min="18"
-                                data-size="Big Headliness" style=
-                                "padding: 0px 0px 36px; font-size: 26px; line-height: 46.8px;">
-                                Canceling PRO? We're sorry to hear that.</td>
-                              </tr>
+                        <td align="center"><img border="0" data-crop="false"
+                        height="144" src=
+                        "https://hummingbird.me/images/pro-header.png"
+                        style="display: block;" />
+                        </td>
+                      </tr>
 
 
-                              <tr>
-                                <td align="center">
-                                  <a href="#" style=
-                                  "text-decoration: none;"><img alt="" border=
-                                  "0" src=
-                                  "http://www.stampready.net/dashboard/editor/uploads/5496632785495.jpg"
-                                  style="display: block;" width="100%" /></a>
-                                </td>
-                              </tr>
-                            </tbody>
-                          </table>
+                      <tr>
+                        <td align="center" data-color="Header Headline"
+                        data-max="64" data-min="18" data-size="Header Headline"
+                        style="padding: 36px 0px 78px 0px;">Welcome to the
+                        club.</td>
+                      </tr>
+
+
+                      <tr>
+                        <td align="right">
                         </td>
                       </tr>
                     </tbody>
@@ -95,30 +87,221 @@
               </tr>
             </tbody>
           </table>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 
 
+  <table align="center" border="0" cellpadding="0" cellspacing="0" data-module=
+  "team" style=
+  "background-color: #FFFFFF; opacity: 1; position: relative; z-index: 0"
+  width="100%">
+    <tbody>
+      <tr>
+        <td height="84">
+        </td>
+      </tr>
+
+
+      <tr>
+        <td style="border-bottom: 1px solid #e0e0e0;">
           <table align="center" border="0" cellpadding="0" cellspacing="0"
           class="scale" style=
-          "font-family:'ProximaNW01-AltLightReg', Helvetica, Arial, sans-serif; font-size: 15px; color: #9b9b9b;"
+          "font-family:'Proxima N W01 At Reg', Helvetica, Arial, sans-serif; font-size: 24px; color: #242424;"
           width="600">
             <tbody>
               <tr>
+                <td align="center" data-color="Big Headliness" data-max="36"
+                data-min="18" data-size="Big Headliness">You've been given the
+                gift of PRO.</td>
+              </tr>
+
+
+              <tr>
                 <td align="center" class="scale-center-both" style=
-                "padding: 24px 0px 36px 0px;"><span style=
-                "font-size: 20px; line-height: 36px;">We've canceled your
-                subscription to Hummingbird PRO.<br />
-                Your service <b>will not</b> renew after this billing period.
-                &nbsp;</span>
+                "padding: 15px 0px 48px 0px;">
+                  <font style="font-family: ProximaNW01-AltLightReg, Helvetica, Arial, sans-serif; font-size: 24px; color: rgb(155, 155, 155); line-height: 43.2px;" data-color="Paragraphs" data-size="Paragraphs" data-min="12" data-max="24">
+                    "<%= @message %>"</font>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+
+
+          <table align="center" border="0" cellpadding="0" cellspacing="0"
+          class="scale" width="512">
+            <tbody>
+              <tr>
+                <td>
+                  <table align="left" border="0" cellpadding="0" cellspacing=
+                  "0" class="scale" width="331">
+                    <tbody>
+                      <tr>
+                        <td>
+                          <table align="left" border="0" cellpadding="0"
+                          cellspacing="0" class="scale" style=
+                          "font-family:'ProximaNW01-AltLightReg', Helvetica, Arial, sans-serif; font-size: 12px; color: #9b9b9b;"
+                          width="150">
+                            <tbody>
+                              <tr>
+                                <td class="scale-center">
+                                </td>
+                              </tr>
+
+
+                              <tr>
+                                <td align="center" class="scale-center-both"
+                                style="padding: 24px 19px 0px 0px;">
+                                </td>
+                              </tr>
+
+
+                              <tr>
+                                <td align="center" class=
+                                "scale-center-bottom-both" style=
+                                "padding: 0px 19px 0px 0px;">
+                                </td>
+                              </tr>
+                            </tbody>
+                          </table>
+
+
+                          <table align="right" border="0" cellpadding="0"
+                          cellspacing="0" class="scale" style=
+                          "font-family:'ProximaNW01-AltLightReg', Helvetica, Arial, sans-serif; font-size: 12px; color: #9b9b9b;"
+                          width="150">
+                            <tbody>
+                              <tr>
+                                <td align="center" class="scale-center-top">
+                                  <a href=
+                                    "https://hummingbird.me/users/<%= @gifter.name %>">
+                                  <img border="0" class="reset" src=
+                                  "<%= @gifter.avatar.url(:thumb) %>"
+                                  style=
+                                  "display: block; border-radius: 50%" /></a>
+                                </td>
+                              </tr>
+
+
+                              <tr>
+                                <td align="center" style=
+                                "font-weight: bold; padding: 24px 0px 0px 0px">
+                                <font style="font-family: 'Proxima N W01 At Reg', Helvetica, Arial, sans-serif; font-size: 24px; line-height: 43.2px;" data-color="Headlines" data-size="Headlines" data-min="12" data-max="24">
+                                  <b>
+                                    <a href="https://hummingbird.me/users/<%= @gifter.name %>"><%= @gifter.name %></a></b>
+                                  </font></td>
+                              </tr>
+
+
+                              <tr>
+                                <td align="center" class=
+                                "scale-center-bottom-both">
+                                </td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+
+
+                  <table align="right" border="0" cellpadding="0" cellspacing=
+                  "0" class="scale" style=
+                  "font-family:'ProximaNW01-AltLightReg', Helvetica, Arial, sans-serif; font-size: 12px; color: #9b9b9b;"
+                  width="150">
+                    <tbody>
+                      <tr>
+                        <td align="right" class="scale-center-top">
+                        </td>
+                      </tr>
+
+
+                      <tr>
+                        <td align="center" class="scale-center-both" style=
+                        "padding: 24px 0px 0px 19px;">
+                        </td>
+                      </tr>
+
+
+                      <tr>
+                        <td align="center" class="scale-center-both" style=
+                        "padding: 0px 0px 0px 19px;">
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </td>
+              </tr>
+
+
+              <tr>
+                <td height="60">
                 </td>
               </tr>
             </tbody>
           </table>
         </td>
       </tr>
+    </tbody>
+  </table>
 
 
+  <table align="center" border="0" cellpadding="0" cellspacing="0" data-module=
+  "intro" style=
+  "background-color: #FFFFFF; opacity: 1; position: relative; z-index: 0"
+  width="100%">
+    <tbody>
       <tr>
-        <td>
+        <td style="border-bottom: 1px solid #e0e0e0;">
+          <table align="center" border="0" cellpadding="0" cellspacing="0"
+          class="scale" style=
+          "font-family:'ProximaNW01-AltLightReg', Helvetica, Arial, sans-serif; font-size: 15px; color: #9b9b9b;"
+          width="600">
+            <tbody>
+              <tr>
+                <td height="84">
+                </td>
+              </tr>
+
+
+              <tr>
+                <td align="center" class="scale-center-both"><font style="font-family:'Proxima N W01 At Reg', Helvetica, Arial, sans-serif; font-size: 24px; color: #242424;" data-color="Big Headliness" data-size="Big Headliness" data-min="18" data-max="36">
+                  What is Hummingbird PRO?</font>
+                </td>
+              </tr>
+
+
+              <tr>
+                <td align="center" class="scale-center-both" style=
+                "padding: 15px 0px 54px 0px;"><span style=
+                "line-height: 30px;">Directly supporting us with PRO means a
+                lot! You'll also get access to new features before they are
+                available to the community as a whole, a fancy ass badge beside
+                your name and special benefits from PRO partners for
+                exceptional products and services.</span>
+                </td>
+              </tr>
+
+
+              <tr>
+                <td align="center">
+                  <a data-bgcolor="Buttons" data-color="Buttons" data-max="24"
+                  data-size="Buttons" href="https://www.hummingbird.me/pro"
+                  style=
+                  "text-decoration: none; color: rgb(255, 255, 255); padding: 12px 21px 11px; border-radius: 3px; background-color: rgb(22, 160, 133);">
+                  Learn More</a>
+                </td>
+              </tr>
+
+
+              <tr>
+                <td height="90">
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </td>
       </tr>
     </tbody>
@@ -144,7 +327,7 @@
                     "color:#777;font-family:'Helvetica Neue',Helvetica,Arial;font-weight:500;text-decoration:none"
                     target="_blank"><img alt="Hummingbird" class="CToWUd"
                     height="50" src=
-                    "https://s3.amazonaws.com/uploads.hipchat.com/40468/273917/rrHwWs4xyhcVIV4/tiny-logo.jpg"
+                    "https://hummingbird.me/images/tiny-logo.jpg"
                     style=
                     "border:0;display:inline;min-height:auto;line-height:100%;outline:none;text-decoration:none"
                     width="50" /></a>
@@ -163,3 +346,4 @@
   </div>
 </body>
 </html>
+
