Use display title for quick update bar. Fixes #335

--- a/app/frontend/app/templates/components/quick-update.hbs
+++ b/app/frontend/app/templates/components/quick-update.hbs
@@ -15,8 +15,8 @@
               <div class="overlay-wrapper">
                 <div class="overlay-panel">
                   <h4 class="series-title">
-                    {{#link-to 'anime' anime.id class="quick-update-title-link" title=anime.canonicalTitle}}
-                      {{anime.canonicalTitle}}
+                    {{#link-to 'anime' anime.id class="quick-update-title-link" title=anime.displayTitle}}
+                      {{anime.displayTitle}}
                     {{/link-to}}
                   </h4>
                   <div class="actionable">
