--- a/app/frontend/app/templates/dashboard.hbs
+++ b/app/frontend/app/templates/dashboard.hbs
@@ -3,6 +3,9 @@
 <div class="user-dashboard">
   <div class="feed-head-advert">
     {{ad-unit adId="1293413" adClass="257f81e798bd68dd81e60f42838f361f"}}
+    <div class="ad-background">
+      {{#link-to 'pro'}}<img src="../assets/pro-banner.jpg">{{/link-to}}
+    </div>
   </div>
   <a id="left-column" class="mobile-tab btn btn-default" href="#left-column"> Show Sidebar</a>
   <a id="right-column" class="mobile-tab btn btn-default" href="#right-column"> Show Activity Feed</a>
