Fix PRO gift message.

--- a/app/frontend/app/templates/pro.hbs
+++ b/app/frontend/app/templates/pro.hbs
@@ -111,7 +111,7 @@
                   {{input type="text" class="gift-input inline" placeholder="Enter a username..." size="13" maxlength="20" value=giftTo}}
                   <ul class="indent">
                     <li>
-                      <textarea rows="2" placeholder="Go ahead, say something clever..." class="giftmessage gift-input" {{bind-attr value=giftMessage}}></textarea>
+                      {{textarea class="giftmessage gift-input" rows="2" placeholder="Go ahead, say something clever..." value=giftMessage}}
                     </li>
                   </ul>
                 </div>
