--- a/app/views/pro_mailer/gift_email.html.erb
+++ b/app/views/pro_mailer/gift_email.html.erb
@@ -48,13 +48,13 @@
     <tbody>
       <tr>
         <td data-bg="Header" height="462" style=
-        "-webkit-background-size: cover; background-attachment: scroll; background-color: #303030; background-image: url(https://hummingbird.me/images/pro-back-madoka.jpg); background-position: 50% 50%; background-repeat: no-repeat; background-size: cover">
+        "-webkit-background-size: cover; background-attachment: scroll; background-color: #303030; background-image: url(https://hummingbird.me/images/pro-back-madoka.jpg); background-position: 50% 50%; background-repeat: repeat-x; background-size: cover">
         <table align="center" border="0" cellpadding="0" cellspacing="0"
           style="opacity: 0.95" width="100%">
             <tbody>
               <tr>
                 <td data-bgcolor="Header" height="462" style=
-                "background-color: #303030;" valign="bottom">
+                "background-color: #303030; background-color: rgba(0,0,0,.7)" valign="bottom">
                   <table align="center" border="0" cellpadding="0" cellspacing=
                   "0" class="scale" style=
                   "font-family:'ProximaNW01-AltLightReg', Helvetica, Arial, sans-serif; font-size: 32px; color: #FFFFFF;"
