--- a/app/assets/stylesheets/modules/_typography.css.scss
+++ b/app/assets/stylesheets/modules/_typography.css.scss
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600);
+@import url(//fonts.googleapis.com/css?family=Open+Sans:400,600);
 
 body {
   font-family: $bodyFontFamily;
