Don't use screen

--- a/app/assets/stylesheets/partials/anime-page.css.scss
+++ b/app/assets/stylesheets/partials/anime-page.css.scss
@@ -629,7 +629,7 @@
   }
 }
 
-@media screen and (min-width: 1460px) {
+@media (min-width: 1460px) {
   .review-listing {
     .quote-bubble {
       max-width: 49%;
