Prevent being overridden by the Pull-Left
oops

--- a/app/assets/stylesheets/partials/anime-page.css.scss
+++ b/app/assets/stylesheets/partials/anime-page.css.scss
@@ -634,7 +634,7 @@
     .quote-bubble {
       max-width: 49%;
       &:nth-of-type(odd) {
-        float: right;
+        float: right !important;
       }
     }
     .media-body > p {
