--- a/app/frontend/app/templates/user/following.hbs
+++ b/app/frontend/app/templates/user/following.hbs
@@ -9,11 +9,7 @@
           <a {{bind-attr href=userLink}}>
             {{avatar this 'thumb'}}
           </a>
-          {{#if isFollowed}}
-            <a class="btn follow-button unfollow" {{action "toggleFollow" this}}> Unfollow</a>
-          {{else}}
-            <a class="btn follow-button" {{action "toggleFollow" this}}> Follow</a>
-          {{/if}}
+          {{follow-button user=this}}
         </div>
         <div class="user-info">
           <h4>{{#link-to 'user' username}}{{username}}{{/link-to}}</h4>
