Allow additional classes for follow button

--- a/app/frontend/app/templates/user.hbs
+++ b/app/frontend/app/templates/user.hbs
@@ -64,7 +64,7 @@
                 </button>
               {{/if}}
             {{else}}
-              {{follow-button user=this}}
+              {{follow-button user=this classes="btn-default btn-lg"}}
             {{/if}}
           </div>
         </div>
