--- a/app/frontend/app/templates/components/follow-button.hbs
+++ b/app/frontend/app/templates/components/follow-button.hbs
@@ -1,7 +1,7 @@
 {{#unless isOwnButton}}
   {{#if user.isFollowed}}
-    <a class="btn follow-button unfollow" {{action "toggleFollow" user}}> Unfollow</a>
+    <a {{bind-attr class=":btn :follow-button :unfollow classes"}} {{action "toggleFollow" user}}> Unfollow</a>
   {{else}}
-    <a class="btn follow-button" {{action "toggleFollow" user}}> Follow</a>
+    <a {{bind-attr class=":btn :follow-button classes"}} {{action "toggleFollow" user}}> Follow</a>
   {{/if}}
 {{/unless}}
