--- a/app/frontend/app/templates/reviews/show.hbs
+++ b/app/frontend/app/templates/reviews/show.hbs
@@ -74,7 +74,7 @@
       </div>
       <div class="reviewer-information">
         <h5>{{#link-to 'user' user}}{{user.username}}{{/link-to}}</h5>
-        {{follow-button user=user}}
+        {{follow-button user=user classes="btn-default btn-lg"}}
       </div>
     </div>
     <div class="series-panel">
